# MNIST_Inference

./: CMakeLists.txt  build_run.sh
app/: CMakeLists.txt  main.cc
include/: ImageData.h  gpu_inference.cuh  gpu_inference.h  image_data.h  mnist.h  weight_loader.h
lib/: CMakeLists.txt  gpu_inference.cu  weight_loader.cc
